# PicOS

./: .gitignore  .gitmodules  .luarc.json  .mcp.json  CLAUDE.md  CMakeLists.txt  Makefile  README.md  SDK.md  TODO.md  docs_coverage.md  mockup.aseprite
.github/workflows/: build-sim.yml  e2e.yml  release.yml
apps/3dtest/: app.json  main.lua
apps/block.exe/: app.json  main.lua
apps/burnin_fixer/: app.json  main.lua
apps/c64/: Makefile  app.json  main.c  main.elf  stubs.c
apps/calculator/: TODO.md  app.json  calc_base.lua  calc_complex.lua  calc_engine.lua  calc_functions.lua  calc_graph.lua  calc_memory.lua  calc_solver.lua  calc_stats.lua  main.lua  ui_graph.lua  ui_solve.lua
apps/calculator/tests/: test_all.lua  test_calc_base.lua  test_calc_complex.lua  test_calc_engine.lua  test_calc_functions.lua  test_calc_graph.lua  test_calc_memory.lua  test_calc_solver.lua  test_calc_stats.lua
apps/doom/: Makefile  app.json  dg_picos.c  i_picos_sound.c  linker.ld  main.elf  mus_player.c  mus_player.h  opl.c  opl.h  opl_capture.c  opl_capture.h  stubs.c
apps/dos86/: Makefile  app.json  audio_mix.c  audio_mix.h  backend.c  backend.h  main.c  main.elf  opl.c  opl.h  scancode.c  scancode.h  speaker.c  speaker.h  stubs.c  terminal.h
apps/dos86/fake86/: bios.c  bios.h  config.h  cpu.c  cpu.h  disk.c  disk.h  i8253.c  i8253.h  i8259.c  i8259.h  ports.c  ports.h  render.c  render.h  video.c  video.h
apps/dos86/opl2/: opl2_core.c  opl2_core.h
apps/dos86/roms/: bin2header.py  pcxtbios.h  videorom.h
apps/editor/: app.json  main.lua
apps/filemanager/: TODO.md  app.json  main.lua
apps/gbc/: Makefile  app.json  app_abi.h  display.c  display.h  fs.c  fs.h  input.c  input.h  linker.ld  main.c  main.elf  os.h  test.c
apps/graphicstest/: app.json
apps/guinea_pig/: PLAN.md  app.json  main.lua
apps/hello/: app.json  main.lua
apps/hello_c/: app.json  main.elf
apps/image_viewer/: app.json  main.lua
apps/keytest/: app.json  main.lua
apps/llmchat/: app.json  main.lua
apps/picoforge/: app.json  buffer.lua  draw_tools.lua  editor.lua  main.lua  mem_viewer.lua  music_data.lua  music_editor.lua  music_player.lua  palette.lua  project.lua  runner.lua  sfx_data.lua  sfx_editor.lua  sprite_canvas.lua  sprite_editor.lua  spritesheet.lua  synth.lua  test_buffer.lua  test_tokenizer.lua  tokenizer.lua  ui_tabs.lua
apps/platformer_demo/: app.json  main.lua
apps/snake/: app.json  main.lua
apps/ssh/: app.json  main.lua
apps/ssh/lib/: ssh_auth.lua  ssh_connection.lua  ssh_input.lua  ssh_transport.lua  ssh_wire.lua
apps/store/: app.json  main.lua
apps/systest/: app.json  main.lua
apps/terminal_example/: app.json  main.lua
apps/updater/: app.json  main.lua
apps/wikipedia/: app.json  main.lua
scripts/: openocd-pico.cfg
scripts/list_lua_api/: main.go
sdk/lua/: picocalc.lua
sdk/native/: Makefile  linker.ld  main.c  main.elf  os.h  terminal.h
simulator/: CMakeLists.txt  README.md  main.c  sim_audio.c  sim_http.c  sim_socket.c  sim_socket.h  sim_socket_handler.c  sim_socket_handler.h  sim_tcp.c  sim_wifi.c  sim_wifi.h  unicorn_runner.c  unicorn_runner.h  unicorn_trampolines.c
simulator/assets/sd_card/apps/hello/: app.json
simulator/hal/: hal_audio.c  hal_audio.h  hal_display.c  hal_display.h  hal_input.c  hal_input.h  hal_psram.c  hal_psram.h  hal_sdcard.c  hal_sdcard.h  hal_threading.c  hal_threading.h  hal_timing.c  hal_timing.h
simulator/stubs/: dev_commands_stub.c  driver_stubs.c  hardware_stubs.c  hardware_stubs.h  keyboard_stub.c  pico_sdk_stubs.c  pico_sdk_stubs.h  umm_malloc.h
simulator/stubs/hardware/: clocks.h  gpio.h  sync.h  timer.h  uart.h  vreg.h  watchdog.h  xip_cache.h
simulator/stubs/hardware/structs/: xip.h
simulator/stubs/pico/: bootrom.h  critical_section.h  mutex.h  platform.h  stdlib.h  time.h
src/: dev_commands.c  dev_commands.h  hardware.h  lwipopts.h  main.c  mbedtls_config.h  splash_logo.h
src/drivers/: altcp_tls_mbedtls_compat.c  audio.c  audio.h  display.c  display.h  fileplayer.c  fileplayer.h  http.c  http.h  image_api.c  image_api.h  image_preload.c  image_preload.h  keyboard.c  keyboard.h  lcd_spi.pio  mod_player.c  mod_player.h  mp3_player.c  mp3_player.h  pio_psram.c  pio_psram.h  pio_psram_bulk.c  pio_psram_bulk.h  pio_psram_bulk.pio  sdcard.c  sdcard.h  sound.c  sound.h  tcp.c  tcp.h  video_player.cpp  video_player.h  wifi.c  wifi.h
src/fonts/: font_6x11.c  font_6x11.h  font_scientifica.c  font_scientifica.h
src/os/: app_abi.h  app_runner.h  appconfig.c  appconfig.h  clock.c  config.c  config.h  core1_alloc.c  core1_alloc.h  crashlog.c  crashlog.h  crypto.c  crypto.h  file_browser.c  file_browser.h  image_decoders.cpp  image_decoders.h  launcher.c  launcher.h  launcher_types.h  lua_bridge.c  lua_bridge.h  lua_bridge_3d.c  lua_bridge_appconfig.c  lua_bridge_audio.c  lua_bridge_config.c  lua_bridge_crypto.c  lua_bridge_display.c  lua_bridge_fs.c  lua_bridge_game.c  lua_bridge_game_camera.c  lua_bridge_game_save.c  lua_bridge_game_scene.c  lua_bridge_graphics.c  lua_bridge_input.c  lua_bridge_internal.h  lua_bridge_mod.c  lua_bridge_network.c  lua_bridge_perf.c  lua_bridge_repl.c  (+42 more)
src/usb/: tusb_config.h  usb_descriptors.c  usb_msc.c  usb_msc.h
tests/e2e/: README.md  conftest.py  display.py  picos_simulator.py  requirements.txt  test_audio.py  test_basic.py  test_display.py  test_display_colors.py  test_filesystem.py  test_input.py  test_launcher.py  test_network.py  test_stress.py  test_system.py  test_terminal.py
tests/e2e/apps/audio_test/: app.json  main.lua
tests/e2e/apps/color_test/: app.json  main.lua
tests/e2e/apps/display_test/: app.json  main.lua
tests/e2e/apps/fs_test/: app.json  main.lua
tests/e2e/apps/input_test/: app.json  main.lua
tests/e2e/apps/network_test/: app.json  main.lua
tests/e2e/apps/sys_test/: app.json  main.lua
tests/e2e/apps/term_test/: app.json  main.lua
tools/: bdf2c.py  convert_final.py  convert_raw.py  gen_font_6x11.py  img_to_c.py  opl_replay.c  picos_mcp.py  screenshot.py  test_lua_apps.lua  video_converter.sh
